Restructure + Quick Menu streamlining

--- a/CVRTest/index.html
+++ b/CVRTest/index.html
@@ -4526,7 +4526,7 @@
         </div>
 
         <div class="prop-maininformation">
-            <div class="content-caption">Safety Tags</div>
+            <div class="content-caption">Description</div>
             <p class="description">[Description]</p>
             <div class="content-caption">Safety Tags</div>
             <p class="tags">Prop Tags</p>
