Rearranged User Profile screen

--- a/CVRTest/index.html
+++ b/CVRTest/index.html
@@ -4272,13 +4272,15 @@
 
         <div class="user-toolbar">
             <div class="toolbar-btn button friend-btn"><img src="gfx/friend.svg">Add Friend</div>
-            <div class="toolbar-btn button fav-btn"><img src="gfx/favorite.svg">Favorite</div>
-            <div class="toolbar-btn button volume-btn" onclick="showUserSettings();"><img src="gfx/nav-settings.svg">Settings</div>
             <div class="toolbar-btn button invite-btn"><img src="gfx/invite.svg">Invite</div>
-            <div class="sub-toolbar">
-                <div class="toolbar-btn button kick-btn"><img src="gfx/btn-kick.svg"></div>
-                <div class="toolbar-btn button block-btn"><img src="gfx/block.svg"></div>
-                <div class="toolbar-btn button vote-btn"><img src="gfx/nav-mod-tools.svg"></div>
+            <div class="toolbar-btn button fav-btn"><img src="gfx/favorite.svg">Favorite</div>
+            <div class="toolbar-btn-double">
+                <div class="action-btn-wide button block-btn"><img src="gfx/block.svg">Block</div> 
+                <div class="action-btn-wide button volume-btn" onclick="showUserSettings();"><img src="gfx/nav-settings.svg">Settings</div>
+            </div>     
+            <div class="toolbar-btn-double">
+                <div class="action-btn-wide button kick-btn"><img src="gfx/btn-kick.svg">Kick (Instance Owner Only)</div>
+                <div class="action-btn-wide button vote-btn"><img src="gfx/nav-mod-tools.svg">Start Vote to Kick</div>
             </div>    
         </div>
 
